kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: multiingress
  name: multiingress
  namespace: default
spec:
  ports:
  - name: zoo
    port: 8082
    protocol: TCP
    targetPort: 8082
  - name: foo
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: bar
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: multiingress
  type: ClusterIP
